# python-ismrmrd-reco

./: .gitignore  .gitmodules  LICENSE  README.md  build_docker.sh  plot_img.py  plot_img_debug.py  send_data.sh  send_data_jemris.sh  send_data_pg.sh  send_data_pulseq.sh  seqdev.yml  start_docker  start_docker_gpu  start_docker_it  start_docker_it_gpu
debug/: out.h5
dependency/: fmap.npz  girf_10us.npy  girf_1us.npy
dependency/metadata/: gre_b0mapping_4e1a6.h5  spiralout_gre_fatsat_7T_15f2a.h5
dependency/pulseq_protocols/: 20201210_gre_20slc_TR200_fatsat.h5  20210930_gre_b0mapping_1slc_2mmiso.h5  gre_b0mapping.h5  gre_b0mapping_hashed_df63f.h5  spiralout_gre.h5  spiralout_gre_fatsat.h5
example_data/jemris_simu/: signals_spiralout_CS_shortRF_slc30.h5  signals_spiralout_CS_shortRF_slc90.h5  signals_spiralout_CS_slc30.h5  signals_spiralout_CS_slc90.h5  signals_spiralout_Susc70Mhz_slc30.h5  (+2 more)
example_sequence/: 20201210_gre_20slc_TR200_fatsat.seq
example_sequences/: README.md
python-ismrmrd-server/: bart_pulseq.py  cfft.py  client.py  connection.py  constants.py  main.py  server.py  start-fire-python-server.sh  sync-code-and-start-fire-python-server.sh
python-ismrmrd-server/docker/spiraltraj/: .gitignore  CMakeLists.txt  README.md  gen_spiral.cpp  nonCartesianTraj.cpp  nonCartesianTraj.h  setup.py  test.py  vdspiral.cpp  vdspiral.h
recon/: b0mapping.h5  out.h5  reco_spiralout_CS_shortRF_slc30.h5  reco_spiralout_CS_shortRF_slc90.h5  reco_spiralout_Susc70Mhz_slc30.h5  reco_spiralout_Susc70Mhz_slc90.h5  reco_spiralout_clean_slc30.h5  spiralout_jemris.h5
(+55 files in other folders)
